--- a/keycloak-proxy/values.yaml
+++ b/keycloak-proxy/values.yaml
@@ -49,7 +49,7 @@ tolerations: []
 affinity: {}
 
 configmap:
-  targetUrl: "http://echo-server-2:8080"
+  targetUrl: "http://echo-server:8080"
   realm: master
   realmPublicKey: ""
   authServerUrl: https://keycloak.migmartri.com/auth
