--- a/kubeapps/templates/kubeapps-frontend-deployment.yaml
+++ b/kubeapps/templates/kubeapps-frontend-deployment.yaml
@@ -30,7 +30,7 @@ spec:
 {{ toYaml .Values.frontend.readinessProbe | indent 10 }}
         volumeMounts:
         - name: vhost
-          mountPath: /opt/bitnami/nginx/conf/vhosts
+          mountPath: /etc/nginx/conf.d
         ports:
         - name: http
           containerPort: 8080
